<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_group_functions"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/drawer_menu_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_menu_home">
        </item>

        <item
            android:id="@+id/drawer_menu_like"
            android:icon="@drawable/ic_favorite_black_18dp"
            android:title="@string/drawer_menu_like">
        </item>

        <item
            android:id="@+id/drawer_header_view"
            android:icon="@drawable/ic_visibility_black_24dp"
            android:title="@string/recent_view" />

        <item
            android:id="@+id/drawer_menu_animation"
            android:icon="@drawable/ic_gif_48dp"
            android:title="@string/drawer_menu_about" />

        <item
            android:id="@+id/drawer_menu_bucket"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/drawer_menu_bucket">
        </item>

        <item
            android:id="@+id/drawer_menu_following"
            android:icon="@drawable/ic_sentiment_very_satisfied_black_24dp"
            android:title="@string/drawer_menu_following" />

        <item
            android:id="@+id/drawer_menu_follower"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/drawer_menu_follower" />
    </group>

    <group
        android:id="@+id/drawer_menu_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/drawer_menu_logout" />
    </group>
</menu>