<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/shot_item_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shot_item_height"
        android:src="@android:color/darker_gray"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/shot_item_image"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shot_item_bucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/ic_inbox_black_18dp"
            android:drawablePadding="@dimen/xsmall_space"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/shot_item_bucket"
            tools:text="4"/>

        <TextView
            android:id="@+id/shot_item_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:layout_toLeftOf="@+id/shot_item_bucket"
            android:drawableLeft="@drawable/ic_favorite_black_18dp"
            android:drawablePadding="@dimen/xsmall_space"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/shot_item_like"
            tools:text="160"/>

        <TextView
            android:id="@+id/shot_item_view_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:layout_toLeftOf="@id/shot_item_like"
            android:drawableLeft="@drawable/ic_visibility_black_18dp"
            android:drawablePadding="@dimen/xsmall_space"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/shot_item_view_count"
            tools:text="4800"/>

    </RelativeLayout>
</LinearLayout>