<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/shot_item_with_spinner_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shot_item_height"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/shot_item_image"
        android:src="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shot_item_with_spinner_bucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/small_space"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/shot_item_bucket"
            android:drawableLeft="@drawable/ic_inbox_black_18dp"
            android:drawablePadding="@dimen/xsmall_space"
            tools:text="4" />

        <TextView
            android:id="@+id/shot_item_with_spinner_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:layout_toLeftOf="@+id/shot_item_with_spinner_bucket"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/shot_item_like"
            android:drawableLeft="@drawable/ic_favorite_black_18dp"
            android:drawablePadding="@dimen/xsmall_space"
            tools:text="160" />

        <TextView
            android:id="@+id/shot_item_with_spinner_view_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:layout_toLeftOf="@id/shot_item_with_spinner_like"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/shot_item_view_count"
            android:drawableLeft="@drawable/ic_visibility_black_18dp"
            android:drawablePadding="@dimen/xsmall_space"
            tools:text="4800" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_space"
        android:layout_gravity="center"
        style="?attr/progressBarStyle" />
</LinearLayout>

</android.support.v7.widget.CardView>